--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "next": "^13.3.4"
+  },
+  "scripts": {
+    "start": "node server/index.js"
   }
 }
